# k3w-screensaver

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/screensaver/: __init__.py  cli.py  config.py  icons.py  models.py  renderer.py  uploader.py  wttr.py
tests/: test_renderer.py  test_wttr_client.py
tests/data/: wttr-sample.json
